[gd_scene load_steps=8 format=3 uid="uid://76g1h08gih8a"]

[ext_resource type="Script" path="res://Scripts/Panels/buy_panel.gd" id="1_yuer2"]
[ext_resource type="Texture2D" uid="uid://k45lnqhehp0f" path="res://TMPTextures/11.png" id="2_lru4v"]
[ext_resource type="Script" path="res://Scripts/Panels/villagers_panel.gd" id="3_7tm6c"]
[ext_resource type="Script" path="res://Scripts/Panels/food_value_label.gd" id="3_hopb7"]

[sub_resource type="LabelSettings" id="LabelSettings_40d3g"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_vewfn"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_iq8qq"]
font_size = 64

[node name="ResourcesPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.294118, 0.882353, 0, 0.392157)
polygon = PackedVector2Array(640, 0, 640, 576, 0, 576, 0, 0)

[node name="ResourcesLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 91.0
text = "Zasoby"
label_settings = SubResource("LabelSettings_40d3g")
horizontal_alignment = 1

[node name="BuyPanel" type="Control" parent="."]
anchors_preset = 0
offset_top = 96.0
offset_right = 640.0
offset_bottom = 256.0
script = ExtResource("1_yuer2")

[node name="GrainTextureButton" type="TextureButton" parent="BuyPanel"]
layout_mode = 0
offset_left = 64.0
offset_right = 192.0
offset_bottom = 128.0
texture_normal = ExtResource("2_lru4v")

[node name="Cost" type="Label" parent="BuyPanel/GrainTextureButton"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "0/0"
label_settings = SubResource("LabelSettings_vewfn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeatTextureButton" type="TextureButton" parent="BuyPanel"]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 128.0
texture_normal = ExtResource("2_lru4v")

[node name="Cost" type="Label" parent="BuyPanel/MeatTextureButton"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "0/0"
label_settings = SubResource("LabelSettings_vewfn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlantsTextureButton" type="TextureButton" parent="BuyPanel"]
layout_mode = 0
offset_left = 448.0
offset_right = 576.0
offset_bottom = 128.0
texture_normal = ExtResource("2_lru4v")

[node name="Cost" type="Label" parent="BuyPanel/PlantsTextureButton"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "0/0"
label_settings = SubResource("LabelSettings_vewfn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 384.0
text = "0"
label_settings = SubResource("LabelSettings_40d3g")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_hopb7")

[node name="VillagersPanel" type="Control" parent="."]
anchors_preset = 0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 544.0
script = ExtResource("3_7tm6c")

[node name="BuyTextureButton" type="TextureButton" parent="VillagersPanel"]
layout_mode = 0
offset_left = 32.0
offset_right = 160.0
offset_bottom = 128.0
texture_normal = ExtResource("2_lru4v")

[node name="Cost" type="Label" parent="VillagersPanel/BuyTextureButton"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "0/0"
label_settings = SubResource("LabelSettings_vewfn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplierLabel" type="Label" parent="VillagersPanel"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 128.0
text = "0x"
label_settings = SubResource("LabelSettings_iq8qq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GenerationBar" type="ProgressBar" parent="VillagersPanel"]
layout_mode = 0
offset_left = 384.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 128.0
step = 0.1
show_percentage = false

[connection signal="button_down" from="BuyPanel/GrainTextureButton" to="BuyPanel" method="_on_grain_texture_button_button_down"]
[connection signal="button_down" from="BuyPanel/MeatTextureButton" to="BuyPanel" method="_on_meat_texture_button_button_down"]
[connection signal="button_down" from="BuyPanel/PlantsTextureButton" to="BuyPanel" method="_on_plants_texture_button_button_down"]
[connection signal="button_down" from="VillagersPanel/BuyTextureButton" to="VillagersPanel" method="_on_buy_texture_button_button_down"]
